--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Ferdi",
   "desktopName": "ferdi.desktop",
   "appId": "com.kytwb.ferdi",
-  "version": "5.6.0-nightly.1",
+  "version": "5.6.0-nightly.10-jho",
   "description": "Messaging app for WhatsApp, Slack, Telegram, HipChat, Hangouts and many many more.",
   "copyright": "kytwb",
   "main": "index.js",
@@ -61,7 +61,7 @@
     "@meetfranz/theme": "file:packages/theme",
     "@meetfranz/ui": "file:packages/ui",
     "@sentry/electron": "1.3.0",
-    "address-rfc2822": "^2.0.1",
+    "address-rfc2822": "2.0.5",
     "atob": "2.1.2",
     "auto-launch": "5.0.5",
     "btoa": "1.2.1",
@@ -90,7 +90,7 @@
     "gulp-uglify": "3.0.2",
     "hex-to-rgba": "1.0.2",
     "jsonwebtoken": "8.5.1",
-    "lodash": "^4.17.4",
+    "lodash": "4.17.20",
     "mac-screen-capture-permissions": "1.1.0",
     "macos-version": "5.2.0",
     "marked": "0.7.0",
@@ -101,7 +101,7 @@
     "mobx-react": "5.4.2",
     "mobx-react-form": "1.35.1",
     "mobx-react-router": "3.1.2",
-    "moment": "^2.17.1",
+    "moment": "2.29.1",
     "ms": "2.1.2",
     "node-fetch": "2.6.1",
     "normalize-url": "5.0.0",
@@ -117,14 +117,14 @@
     "react-jss": "8.6.1",
     "react-loader": "2.4.6",
     "react-modal": "3.11.1",
-    "react-router": "^3.0.2",
+    "react-router": "3.2.6",
     "react-sortable-hoc": "1.10.1",
     "react-tooltip": "3.11.1",
     "route-parser": "^0.0.5",
     "semver": "5.7.1",
     "smoothscroll-polyfill": "0.4.4",
     "sqlite3": "4.1.0",
-    "tar": "^4.0.2",
+    "tar": "4.4.13",
     "targz": "1.0.1",
     "terser": "4.4.0",
     "unzip-crx": "0.2.0",
@@ -145,7 +145,7 @@
     "@babel/preset-env": "7.7.4",
     "@babel/preset-react": "7.7.4",
     "@babel/register": "7.7.4",
-    "@types/classnames": "^2.2.6",
+    "@types/classnames": "2.2.10",
     "@types/color": "3.0.0",
     "@types/color-convert": "^1.9.0",
     "@types/fs-extra": "7.0.0",
@@ -157,7 +157,7 @@
     "@types/uuid": "3.4.6",
     "all-contributors-cli": "6.11.0",
     "babel-eslint": "10.0.3",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "8.1.0",
     "babel-plugin-react-intl": "3.0.1",
     "conventional-changelog-cli": "2.0.28",
     "cross-env": "^5.0.5",
@@ -178,7 +178,7 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "1.2.2",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "4.1.0",
     "gulp-sass-variables": "1.2.0",
     "gulp-server-livereload": "^1.9.2",
     "hex-rgb": "3.0.0",
